--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.11",
-    "@angular/common": "~9.1.11",
-    "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11",
-    "@angular/forms": "~9.1.11",
-    "@angular/platform-browser": "~9.1.11",
-    "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/router": "~9.1.11",
+    "@angular/animations": "~10.0.7",
+    "@angular/common": "~10.0.7",
+    "@angular/compiler": "~10.0.7",
+    "@angular/core": "~10.0.7",
+    "@angular/forms": "~10.0.7",
+    "@angular/localize": "~10.0.7",
+    "@angular/platform-browser": "~10.0.7",
+    "@angular/platform-browser-dynamic": "~10.0.7",
+    "@angular/router": "~10.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@uirouter/angular": "^7.0.0",
     "@uirouter/core": "^6.0.6",
     "@uirouter/rx": "^0.6.5",
     "bootstrap": "^4.5.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.6.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.8",
-    "@angular/cli": "^9.0.0-next.2",
-    "@angular/compiler-cli": "~9.1.11",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "~10.0.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -45,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.7"
   }
 }
