--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~10.0.7",
     "@angular/platform-browser-dynamic": "~10.0.7",
     "@angular/router": "~10.0.7",
+    "@fortawesome/fontawesome-pro": "^5.14.0",
+    "@glidejs/glide": "^3.4.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@uirouter/angular": "^7.0.0",
     "@uirouter/core": "^6.0.6",
